	- Convert to use the new low-level input functions, and remove
	  two last hardcoded widths left after the above tweaks. (DLR)
  do_replace_highlight()
	- Display a highlighted space if the word length is zero, so
	  that we can see zero-length regexes we're replacing. (DLR;
	  suggested by Mike Frysinger)
- configure.ac:
	- Check for glib 2.x and then 1.2.x if we need glib. (DLR)
- nano.spec.in:
	- Update for the 1.3 branch of nano. (DLR)
- THANKS:
	- Add Danilo Segan, for the Serbian translation.

GNU nano 1.3.0 - 2003.10.22
- General:
	- Complete overhaul and abstraction of the lowest level of
	  keyboard input, mostly rewritten but incorporating a few bits
	  from the old functions and adding support for Pico's Esc Esc
	  [three-digit decimal ASCII code] input method.  New functions
	  get_kbinput(), get_verbatim_kbinput(), get_ignored_kbinput(),
	  get_accepted_kbinput(), get_ascii_kbinput(),
	  get_escape_seq_kbinput(), and get_skip_tilde_kbinput().  These
	  should work properly on FreeBSD (due to code and input
	  provided by Lee Nelson and Wouter van Hemel, respectively).
	  (DLR)
	- The -K/--keypad command line/rcfile option has been removed,
	  and keypad() is now always TRUE.  keypad_on() in winio.c and
	  the check for _use_keypad in configure.ac have both been
	  removed. (DLR)
	- The -d/--rebinddelete command line/rcfile option, equivalent
	  to Pico's -d, has been added.  It is intended to work around
	  the problem with Backspace/Delete confusion on some terminals,
	  notably FreeBSD; if your Backspace key acts like Delete, this
	  option will fix that. (DLR)
	- Remove unneeded breaks at the ends of default: clauses. (DLR)
	- Add the ability to repeat the last search without prompting
	  via Meta-W, and move the line wrapping toggle to Meta-L.  New
	  function do_research(). (Wouter van Hemel)
	- Added the ability to move to the beginning or end of the
	  paragraph, which Pico has via ^W^W (previous paragraph)